// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popup should render the component with defaults 1`] = `
<TransitionWrapper
  getPortalElement={[Function]}
  isOpen={true}
  isPortalReady={false}
  render={[Function]}
  transitionEnterTimeout={100}
  transitionExitTimeout={100}
  transitionName="popup"
/>
`;

exports[`popup should render the component without testPopup prop 1`] = `
<TransitionWrapper
  getPortalElement={[Function]}
  isOpen={false}
  isPortalReady={false}
  render={[Function]}
  transitionEnterTimeout={100}
  transitionExitTimeout={100}
  transitionName="popup"
/>
`;

exports[`popup should render the render prop 1`] = `
<div
  className="my-popup"
  onMouseUp={[Function]}
  style={
    Object {
      "color": "#fff",
      "left": undefined,
      "top": undefined,
    }
  }
>
  <div>
    Test
  </div>
</div>
`;
